--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -43,7 +43,11 @@
                     console.log("Date2 : "+calDate2);
 
                     let MSec = calDate1.getTime() - calDate2.getTime();
-
+                    let Min = MSec / 1000 / 60;
+                    Min = parseInt(Min);
+                    let h = Min / 60;
+                    h = Math.round(h);
+                    console.log("h : "+h);
                     if(h == 24){
                         $('.noticeTime')[index].append('1일');
                         return;
