탐색탭 화면 구현 중

--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -93,7 +93,7 @@
                 </button>
 
                 <button>
-                    <a href="">
+                    <a th:href="@{/explore/index}">
                         <i class="uil uil-compass"></i>
                         <span>탐색 탭</span>
                     </a>
