--- a/Spring/Photostagram/src/main/resources/static/css/style.css
+++ b/Spring/Photostagram/src/main/resources/static/css/style.css
@@ -540,3 +540,16 @@ body {
     margin-bottom: 0;
 }
 
+div.modal-post div.wrapper div.post-content div.rest div.comment-wrapper .modal_upload_btn {
+    color: #3897f0;
+    position: absolute;
+    right: 6px;
+    top: 105%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    /* pointer-events: none; */
+    opacity: 0.6;
+    border: 0;
+    background: white;
+}
+
