--- a/Spring/Photostagram/src/main/resources/static/css/chat.css
+++ b/Spring/Photostagram/src/main/resources/static/css/chat.css
@@ -517,7 +517,7 @@ input[type='checkbox']:checked::before {
     align-items: stretch;
     border: 0;
     box-sizing: border-box;
-    display: flex;
+    display: block;
     flex-direction: column;
     flex-shrink: 0;
     font: inherit;
