--- a/Spring/Photostagram/src/main/resources/templates/chat/content.html
+++ b/Spring/Photostagram/src/main/resources/templates/chat/content.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script th:inline="javascript">
       
-      $(function(){
+       $(function(){
+
           $("#confirm").click(function(){
               modalClose();
               //컨펌 이벤트 처리
@@ -20,22 +21,11 @@
           function modalClose(){
             $("#overlay").fadeOut();
           }
-        });
 
-    $(function(){
-      $("#lay").click(function(){
-        $("#overlay").css('display','flex').hide().fadeIn();
-      });
-
-      function modalClose(){
-        $("#overlay").fadeOut();
-      }
-    });
-
-
-    $(document).on("click", function(e){
-        if( $("#overlay").is(e.target)) {$("#overlay").css({ visibility:"hidden", opacity:0 });
-    }
+          $("#lay").click(function(){
+            console.log('click!!!');
+            $("#overlay").css('display','flex').hide().fadeIn();
+          });
 
     $('.chatMember').on('click', function(){
         let ul = $(this).parent('ul');
@@ -52,6 +42,44 @@
     var sockJs = new SockJS("/Photostagram/stomp/chat/content");
     //1. SockJS를 내부에 들고있는 stomp를 내어줌
     var stomp = Stomp.over(sockJs);
+
+    //2. connection이 맺어지면 실행
+    stomp.connect({}, function (){
+       console.log("STOMP Connection")
+
+       //4. subscribe(path, callback)으로 메세지를 받을 수 있음
+       stomp.subscribe("/sub/chat/content/" + roomId, function (chat) {
+           var content = JSON.parse(chat.body);
+
+           var writer = content.writer;
+           var str = '';
+
+            console.log('content : '+content);
+            console.log('content.message : '+content.message);
+            console.log('content.writer : '+content.writer);
+
+           if(writer == username){
+               //alert('작성자가 username과 같습니다');
+               str = "<div class='chat ch2'>";
+               str += "<div class='textbox'>"+content.message+"</div>";
+               str += "</div>";
+           }
+           else{
+               //alert('작성자가 username과 다릅니다');
+               str = "<div class='chat ch1'>";
+               str += "<div class='icon'>";
+               str += "<img class='' src='/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg' alt='계정사진'>";
+               str += "</div>";
+               str += "<div class='textbox'>"+content.message+"</div>";
+               str += "</div>";
+           }
+           $(".wrap").append(str);
+       });
+
+       //3. send(path, header, message)로 메세지를 보낼 수 있음
+       //stomp.send('/pub/chat/enter', {}, JSON.stringify({roomId: roomId, writer: username}));
+    });
+
 /*
     $('.chatbox-box-1').keydown(function(key) {
         //키의 코드가 13번일 경우 (13번은 엔터키)
@@ -78,42 +106,7 @@
         }
     });*/
 
-            //2. connection이 맺어지면 실행
-            stomp.connect({}, function (){
-               console.log("STOMP Connection")
 
-               //4. subscribe(path, callback)으로 메세지를 받을 수 있음
-               stomp.subscribe("/sub/chat/content/" + roomId, function (chat) {
-                   var content = JSON.parse(chat.body);
-
-                   var writer = content.writer;
-                   var str = '';
-
-                    console.log('content : '+content);
-                    console.log('content.message : '+content.message);
-                    console.log('content.writer : '+content.writer);
-
-                   if(writer == username){
-                       //alert('작성자가 username과 같습니다');
-                       str = "<div class='chat ch2'>";
-                       str += "<div class='textbox'>"+content.message+"</div>";
-                       str += "</div>";
-                   }
-                   else{
-                       //alert('작성자가 username과 다릅니다');
-                       str = "<div class='chat ch1'>";
-                       str += "<div class='icon'>";
-                       str += "<img class='' src='/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg' alt='계정사진'>";
-                       str += "</div>";
-                       str += "<div class='textbox'>"+content.message+"</div>";
-                       str += "</div>";
-                   }
-                   $(".wrap").append(str);
-               });
-
-               //3. send(path, header, message)로 메세지를 보낼 수 있음
-               //stomp.send('/pub/chat/enter', {}, JSON.stringify({roomId: roomId, writer: username}));
-            });
 
 
     $('.chatbox-box-1').keydown(function(key) {
@@ -164,7 +157,7 @@
                 <p>[[${user.username}]]</p>
             </div>
             <div class="src2">
-                <img id="lay" th:src="@{/img/free-icon-writing-6570264.png}" alt="">
+                <img id="lay" th:src="@{/img/free-icon-writing-6570264.png}" alt="lay2">
             </div>
         </div>
         <div class="dir2">
